이메일 인증 구현 중 2025/10/12

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/study_application_db?useSSL=fa
 spring.datasource.username=root
 # ?????? ?? ????
 spring.datasource.password=root
+
+spring.mail.host=smtp.naver.com
+# SMTP ?? ?? (TLS)
+spring.mail.port=587
+# ??? ??? (?? ??? ??)
+spring.mail.username=david7643@naver.com
+# ??? ????
+spring.mail.password=Y4TT6UXNWQC5
+# SMTP ?? ?? ??
+spring.mail.properties.mail.smtp.auth=true
+# TLS ??? ?? ?? ??
+spring.mail.properties.mail.smtp.starttls.enable=true
+# SSL ?? ?? ??
+spring.mail.properties.mail.smtp.ssl.trust="smtp.naver.com"
